--- a/back/demo/pom.xml
+++ b/back/demo/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.6.7.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.2</version>
+		</dependency>
 
 	</dependencies>
 	<build>
