--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.1",
     "core-js": "^3.37.0",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
